# peppy

./: .replit  Pasted--Serving-Flask-app-main-Debug-mode-on-INFO-werkzeug-WARNING-This-is-a-development-server-D-1726695213345.txt  Pasted-INFO-werkzeug-WARNING-This-is-a-development-server-Do-not-use-it-in-a-production-deployment-Use-a-1726695316510.txt  Pasted-Skip-to-content-Commands-Search-Packager-files-Config-files-Recent-Cloud-Services-Workspace-Features-1726796401047.txt  Pasted-Skip-to-main-content-Docs-Changelog-Extensions-Search-Replit-Logo-Getting-Started-Replit-Workspace-1726797848920.txt  config.py  main.py  mock_data.py  pyproject.toml
routes/: category_routes.py  search_routes.py  upload_routes.py
services/: image_service.py  s3_utils.py
static/css/: styles.css
static/js/: app.js
templates/: index.html
