[tool.poetry]
name = "peppy"
version = "0.1.0"
description = "A Giphy clone called 'Peppy' using Flask and Vanilla JS"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.3.2"
imagehash = "^4.3.1"
typing-extensions = "^4.7.1"
replit = "^3.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
